syntax = "proto3";

package auth;

option go_package = "github.com/tuannm99/podzone/pkg/api/proto/auth";

import "google/api/annotations.proto";

service AuthService {
  rpc GoogleLogin(GoogleLoginRequest) returns (GoogleLoginResponse) {
    option (google.api.http) = {
      get: "/auth/v1/google/login"
    };
  }

  rpc GoogleCallback(GoogleCallbackRequest) returns (GoogleCallbackResponse) {
    option (google.api.http) = {
      get: "/auth/v1/google/callback"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/auth/v1/login"
      body: "*"
    };
  }

  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/auth/v1/register"
      body: "*"
    };
  }

  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      get: "/auth/v1/logout"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string jwt_token = 1;
  UserInfo user_info = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string jwt_token = 1;
  UserInfo user_info = 2;
}

message GoogleLoginRequest {
  string redirect_after_login = 1;
}

message GoogleLoginResponse {
  string redirect_url = 1;
}

message GoogleCallbackRequest {
  string state = 1;
  string code = 2;
}

message GoogleCallbackResponse {
  string jwt_token = 1;
  string redirect_url = 2;
  GoogleUserInfo user_info = 3;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
  string redirect_url = 2;
}

message GoogleUserInfo {
  string id = 1;
  string email = 2;
  string name = 3;
  string given_name = 4;
  string family_name = 5;
  string picture = 6;
  bool email_verified = 7;
}

message UserInfo {
  string id = 1;
  string email = 2;
  string name = 3;
  string full_name = 4;
  string middle_name = 5;
  string first_name = 6;
  string last_name = 7;
  string address = 8;
  string initial_from = 9;
  int32 age = 10;
  string dob = 11;
  bool email_verified = 12;
}
